--- a/APJ_Abdul.html
+++ b/APJ_Abdul.html
@@ -126,14 +126,33 @@
 
 
     </div>
-    <br>
-    For more information,
-    check out
-    <a id="tribute-link" href="#">
-      <b>A.P.J. Abdul Kalam</b> on Wikipedia. [
-      <small>Developed by @<a href="#">
-          Haadiyah Khan</a></a>
-    </small>]
+    <section class="footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-8 col-11">
+            <div class="copy-r">
+              <br>
+              For more information,
+              check out
+              <a id="tribute-link" href="#">
+                <b>A.P.J. Abdul Kalam</b> on Wikipedia.
+                <br>[
+                <small>Developed by @<a href="#" class="developer">
+                    <b> Haadiyah Khan</b></a></a>
+              </small>]
+            </div>
+          </div>
+          <div class="col-lg-4 col-11">
+            <div class="social-icons mt-3">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-solid fa-phone"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
