--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haadiyah_Project</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/33059fb9fe.js" crossorigin="anonymous"></script>
+
 </head>
-<body>
-    
+
+<body class="home-page">
+    <section>
+        <div class="header-data">
+            <div class="header_container">
+                <img src="image/logo.jpeg" alt="img_logo" id="web_logo">
+                <div class="header-list">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="#">legends<i class="fa fa-caret-down"></i></a></li>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </ul>
+                </div>
+            </div>
+
+            <section class="footer1">
+                <div class="container-fluid">
+                    <div class="row pt-2">
+                        <div class="col-lg-8 col-11">
+                            <div class="copy-r1">
+                                <br>
+                                For more information,
+                                check out
+                                <a id="tribute-link1" href="#">
+                                    <b>LATA MANGESHKAR</b> on Wikipedia.
+                                    <br>[
+                                    <small>Developed by @<a href="#" class="developer">
+                                            <b> Haadiyah Khan</b></a></a>
+                                </small>]
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
+
+
+
+
+    <script src="https://kit.fontawesome.com/33059fb9fe.js" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
