--- a/index.html
+++ b/index.html
@@ -7,46 +7,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haadiyah_Project</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/33059fb9fe.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body class="home-page">
     <section>
-        <div class="header-data">
+        <!-- <div class="header-data">
             <div class="header_container">
                 <img src="image/logo.jpeg" alt="img_logo" id="web_logo">
                 <div class="header-list">
-                    <ul>
+                    <ul class="options">
                         <li><a href="#">Home</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">legends<i class="fa fa-caret-down"></i></a></li>
+                        <li><a href="contact.html">Contact</a></li> -->
+                        <!-- <li><a href="#">legends<i class="fa fa-caret-down"></i></a>
                         <ul>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                            <li><a href="APJ_Abdul.html">A. P. J. Abdul Kalam</a></li>
+                            <li><a href="lataM.html">LATA MANGESHKAR</a></li>
+                        </ul> -->
+                       
+                    <!-- </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
+
+            <nav class="navbar bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand">INDIAN TRIBUTIES</a>
+                  <ul class="nav nav-tabs justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#"></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled">Disabled</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
 
             <section class="footer1">
-                <div class="container-fluid">
-                    <div class="row pt-2">
-                        <div class="col-lg-8 col-11">
-                            <div class="copy-r1">
-                                <br>
-                                For more information,
-                                check out
-                                <a id="tribute-link1" href="#">
-                                    <b>LATA MANGESHKAR</b> on Wikipedia.
-                                    <br>[
-                                    <small>Developed by @<a href="#" class="developer">
-                                            <b> Haadiyah Khan</b></a></a>
-                                </small>]
-                            </div>
-                        </div>
-                    </div>
+                <div class="copy-r1">
+                    <br>
+                    <a>
+                        [<small>Developed by @<a href="#" class="developer">
+                            <b> Haadiyah Khan</b>
+
+                        </small>]
+                    </a>
                 </div>
+
             </section>
         </div>
     </section>
