--- a/index.html
+++ b/index.html
@@ -6,65 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haadiyah_Project</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style1.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/33059fb9fe.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="home-page">
+<body>
     <section>
-        <!-- <div class="header-data">
+        <div class="header-data">
             <div class="header_container">
-                <img src="image/logo.jpeg" alt="img_logo" id="web_logo">
+                <img src="image/logo3.webp" alt="web_logo" id="web_logo"> INDIAN TRIBUTIES
                 <div class="header-list">
-                    <ul class="options">
+                    <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="contact.html">Contact</a></li> -->
-                        <!-- <li><a href="#">legends<i class="fa fa-caret-down"></i></a>
-                        <ul>
-                            <li><a href="APJ_Abdul.html">A. P. J. Abdul Kalam</a></li>
-                            <li><a href="lataM.html">LATA MANGESHKAR</a></li>
-                        </ul> -->
-                       
-                    <!-- </li>
+                        <li><a href="lataM.html">Lata Mangeshkar</a></li>
+                        <li><a href="APJ_Abdul.html">A.P.J.Abdul Kalam</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
+  
+    <section class="footer1">
+        <div class="copy-r1">
+            <br>
+            <a>
+                [<small>Developed by @<a href="#" class="developer">
+                        <b> Haadiyah Khan</b>
 
-            <nav class="navbar bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand">INDIAN TRIBUTIES</a>
-                  <ul class="nav nav-tabs justify-content-end">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled">Disabled</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-
-            <section class="footer1">
-                <div class="copy-r1">
-                    <br>
-                    <a>
-                        [<small>Developed by @<a href="#" class="developer">
-                            <b> Haadiyah Khan</b>
-
-                        </small>]
-                    </a>
-                </div>
-
-            </section>
+                </small>]
+            </a>
         </div>
     </section>
+
+    </section>
+
+
 
 
 
