--- a/APJ_Abdul.html
+++ b/APJ_Abdul.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Haadiyah_Project</title>
+  <title>Group-7</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
