--- a/Thankyou.html
+++ b/Thankyou.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-    <div>
-        <video src="video/Thank You Video Effect.mp4" frameborder="0" width="100%" autoplay loop></video>
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/d3hdMbtuNN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop" allowfullscreen></iframe> -->
+    <div id="tyVideo">
+        <!-- <video src="video/Thank You Video Effect.mp4" frameborder="0" width="100%" autoplay=1 loop></video> -->
+        <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/d3hdMbtuNN0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop" allowfullscreen></iframe> -->
+        <video width="100%" height="70%" frameborder="0" autoplay loop muted>
+            <source src="video/Thank You Video Effect.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
 </body>
 
