--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haadiyah_Project</title>
+    <title>Group7_Project</title>
     <link rel="stylesheet" href="style1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -26,18 +26,24 @@
                     </ul>
                 </div>
             </div>
-  
-    <section class="footer1">
-        <div class="copy-r1">
-            <br>
-            <a>
-                [<small>Developed by @<a href="#" class="developer">
-                        <b> Haadiyah Khan</b>
+          
+            <div id="video">
+                <video class="video1" src="video/India_Flag_4k_1597266701.mp4" width="50%" autoplay loop></video>
+            </div>
+            <div class="group-details1">
+                <img class="group-details" src="image/WhatsApp Image 2022-11-16 at 2.11.56 PM.jpeg" alt="group details">
+            </div>
+            <section class="footer1">
+                <div class="copy-r1">
+                    <br>
+                    <a>
+                        [<small>Developed by @<a href="#" class="developer">
+                                <b> Group </b>
 
-                </small>]
-            </a>
-        </div>
-    </section>
+                        </small>]
+                    </a>
+                </div>
+            </section>
 
     </section>
 
